--- a/css/08.边框.html
+++ b/css/08.边框.html
@@ -3,7 +3,7 @@
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
  * @LastEditors: zt
- * @LastEditTime: 2020-09-22 22:01:12
+ * @LastEditTime: 2020-09-23 21:01:38
  * @Modified By: zt
  * @FilePath: \codesRepository\css\08.边框.html
 -->
@@ -44,8 +44,12 @@
            /* 边框颜色
                 注意点：边框分界是T型的，可以用来做一些特殊的样式
             */
-            
             border-color:red gray green yellowgreen ;
+
+            /* 复合写法 */
+            border: 1px solid red;
+
+
        }
    </style>
   
