--- a/css/12.外边距的折叠.html
+++ b/css/12.外边距的折叠.html
@@ -3,7 +3,7 @@
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
  * @LastEditors: zt
- * @LastEditTime: 2020-09-24 20:54:15
+ * @LastEditTime: 2020-10-09 21:06:25
  * @Modified By: zt
  * @FilePath: \codesRepository\css\12.外边距的折叠.html
 -->
@@ -21,6 +21,12 @@
        2.父子元素间的垂直方向外边距相邻,子元素的外边距会传递给父元素         
          1.给父元素设置padding(父元素padding-top：100，同时高度减少100px)
          2.破坏子元素与父元素的相邻状态(给父元素border或者上内边距都行)        
+    
+       也可以通过设置伪元素before
+       xxx::before{
+           content:''
+           display:table
+       } 
     -->
     <div class="d1">
         <div class="d2"></div>
