--- a/css/13.文档流.html
+++ b/css/13.文档流.html
@@ -3,7 +3,7 @@
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
  * @LastEditors: zt
- * @LastEditTime: 2020-09-25 20:40:23
+ * @LastEditTime: 2020-09-26 08:47:35
  * @Modified By: zt
  * @FilePath: \codesRepository\css\13.文档流.html
 -->
@@ -18,7 +18,7 @@
     <!-- 文档流的特点：
         1.块级元素
             1.块级元素独占一行，从上之下排列，默认不会同行
-            2.默认宽度和元素一样是auto，变现为占满一行
+            2.默认宽度和元素一样是auto，表现为占满一行
             3.默认高度为内容撑开
             
         2.行内元素
