--- a/css/21.浮动.html
+++ b/css/21.浮动.html
@@ -3,7 +3,7 @@
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
  * @LastEditors: zt
- * @LastEditTime: 2020-09-25 21:56:02
+ * @LastEditTime: 2020-10-09 20:59:38
  * @Modified By: zt
  * @FilePath: \codesRepository\css\21.浮动.html
 -->
@@ -49,6 +49,11 @@
                 none：默认值，不浮动
                 left：左浮动
                 right：右浮动
+            下面的元素如果不要浮动，需要清除浮动 
+            clear  原理：将浮动元素的高度，设置为外边距
+                left：清除左侧浮动的影响
+                right：清除右侧浮动的影响
+                both：清除两侧浮动影响较大的一个        
             1.设置浮动后，该元素就会脱离文档流，后面的元素就会自动上移 
             2.浮动元素不会超过其上没有浮动的元素
             3.浮动元素的默认位置不会超过其上的其他浮动元素，只会紧跟，不会超过
@@ -58,9 +63,13 @@
             2.默认高度被内容撑开
             3.块元素也不会在独占一行
             4.行内元素也会脱离文档流
-            5.行内元素脱离文档流后就变成了块元素。特点和块元素一样
+            5.行内元素脱离文档流后就变成了块元素（可以设置宽高）。特点和块元素一样
             5.元素不会再占据位置
          */
+         /* 
+            1.文字不会被浮动的元素遮挡，文字会环绕在图片四周
+         
+          */
 
          span{
              float: left;
