--- a/css/25.固定定位.html
+++ b/css/25.固定定位.html
@@ -17,7 +17,7 @@
 <body>
     <!-- 
         绝对定位：
-            position：absolute
+            position：fixed
             特点：与绝对定位基本一致
 
             最大特点：永远相对于视口。不会随着滚动条滚动
