--- a/测试.html
+++ b/测试.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div></div>
-       <style>
+       <style lang="stylus">
            div{
                width: 100px;
                height: 100px;
