--- a/css/04.属性选择器.html
+++ b/css/04.属性选择器.html
@@ -2,8 +2,8 @@
  * @Author: zt
  * @FileName: 
  * @Date: 2020-09-22 20:11:25
- * @LastEditors: zt
- * @LastEditTime: 2020-09-22 20:26:45
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-10-21 10:42:18
  * @Modified By: zt
  * @FilePath: \codesRepository\css\04.属性选择器.html
 -->
@@ -28,7 +28,7 @@
             background-color: rosybrown;
         }
         /* 选择属性title=div1的标签 */
-        div[title=div1]{
+        div[title='div1']{
             background-color: saddlebrown;
         }
         /* 选择title属性值以d开头的 ,加上i表示忽略大小写 */
