--- a/css/14.行内元素的盒子模型.html
+++ b/css/14.行内元素的盒子模型.html
@@ -2,8 +2,8 @@
  * @Author: zt
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
- * @LastEditors: zt
- * @LastEditTime: 2020-09-24 21:47:53
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-10-21 13:42:08
  * @Modified By: zt
  * @FilePath: \codesRepository\css\14.行内元素的盒子模型.html
 -->
@@ -30,7 +30,7 @@
     <div></div>
     <style>
         span{
-            background-color: blanchedalmond;
+            background-color: rgba(148, 38, 38, 0.541)
         }
         div{
             width: 100px;
@@ -38,6 +38,11 @@
             background-color: brown;
         }
         .s1{
+            padding: 10px;
+            margin-right: 10px;
+            border: 20px solid black;
+        }
+        .s2{
             padding: 10px;
             margin-left: 10px;
             border: 20px solid black;
