--- a/css/20.轮廓和阴影.html
+++ b/css/20.轮廓和阴影.html
@@ -2,8 +2,8 @@
  * @Author: zt
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
- * @LastEditors: zt
- * @LastEditTime: 2020-09-25 21:15:14
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-10-21 13:48:20
  * @Modified By: zt
  * @FilePath: \codesRepository\css\20.轮廓和阴影.html
 -->
@@ -25,7 +25,7 @@
             margin: 0 auto;
             background-color: black;
             /* 轮廓outline与边框相似,同时不会影响布局 */
-            /* outline: 12px solid chartreuse; */
+            outline: 12px solid chartreuse;
 
             /* 阴影
                 第一个参数 inset：可选，内部阴影
