--- a/css/32.文本样式.html
+++ b/css/32.文本样式.html
@@ -2,8 +2,8 @@
  * @Author: zt
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
- * @LastEditors: zt
- * @LastEditTime: 2020-10-09 22:06:12
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-10-22 20:38:42
  * @Modified By: zt
  * @FilePath: \codesRepository\css\25.固定定位.html
 -->
@@ -29,7 +29,7 @@
                 bottom 与top同理（可以用来设置图片的下边对齐）
                 supper：上标
                 sub：下标
-                middle：居中（实际没有居中效果）
+                middle：居中
                 px：正数代表向上移，负数代表向下移动
                 %：相对于行高    
             text-decoration：文本修饰
