--- a/css/33.背景.html
+++ b/css/33.背景.html
@@ -2,8 +2,8 @@
  * @Author: zt
  * @FileName: 
  * @Date: 2020-09-22 20:36:06
- * @LastEditors: zt
- * @LastEditTime: 2020-10-09 22:06:12
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-10-21 21:17:29
  * @Modified By: zt
  * @FilePath: \codesRepository\css\25.固定定位.html
 -->
@@ -18,6 +18,10 @@
 <body>
         <!-- 
             background-color：设置背景色
+            background-origin：设置背景原点
+                padding-box	背景图像相对于内边距框来定位。	
+                border-box	背景图像相对于边框盒来定位。
+                content-box	背景图像相对于内容框来定位。
             background-clip：设置背景区域
                 border-box：背景会延伸到边框和padding中
                 content-box：背景只会设置到内容区中
@@ -48,6 +52,10 @@
                         正值向右，负值向左
                     2.垂直方向偏移量
                         正值向下，负值向上
+            background-attachment：设置固定方式
+                scroll	默认值。背景图像会随着页面其余部分的滚动而移动。
+                fixed	当页面的其余部分滚动时，背景图像不会移动。
+                inherit	规定应该从父元素继承 background-attachment 属性的设置。            
          -->
 </body>
 </html>
