--- a/css/21.浮动.html
+++ b/css/21.浮动.html
@@ -9,40 +9,52 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="d1"></div>
+    <!-- <div class="d1"></div>
     <div class="d2"></div>
     <div class="d3"></div>
     <div class="d4"></div>
     <div></div>
     <div></div>
-    <span>我是span</span>
+    <span>我是span</span> -->
+    <div style="border: 1px solid;height: 100px;">
+        <div style="float: left;width: 300px;height: 300px;border: 1px solid;">
+            dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</div>
+    </div>
+    <div style="float: left;border: 1px solid;width: 300px;height: 300px">ccccccccccccccc</div>
     <style>
-        div{
+        /* div {
             width: 200px;
             height: 200px;
             border: 1px solid red;
-        }
-        .d1{
+        } */
+
+        .d1 {
             float: left;
             background-color: blanchedalmond;
         }
-        .d2{
+
+        .d2 {
             float: left;
             background-color: blue;
-        }    
-        .d3{
+        }
+
+        .d3 {
             float: left;
             background-color: chartreuse;
         }
-        .d4{
+
+        .d4 {
             clear: both;
         }
+
         /*
             浮动特点
             float
@@ -66,17 +78,18 @@
             5.行内元素脱离文档流后就变成了块元素（可以设置宽高）。特点和块元素一样
             5.元素不会再占据位置
          */
-         /* 
+        /* 
             1.文字不会被浮动的元素遮挡，文字会环绕在图片四周
          
           */
 
-         span{
-             float: left;
-             width: 100px;
-             height: 100px;
-             background-color: coral;
-         }
+        span {
+            float: left;
+            width: 100px;
+            height: 100px;
+            background-color: coral;
+        }
     </style>
 </body>
+
 </html>
