--- a/css/30.阿里图标库的使用.html
+++ b/css/30.阿里图标库的使用.html
@@ -22,7 +22,7 @@
     <span class="iconfont">&#xe605;</span>
     <span class="iconfont">&#xe66c;</span>
     <!-- 第二种方式 使用类 -->
-    <span class="iconfont icon-erji"></span>
+    <span class="iconfont">&#xe615;</span>
     <!-- 第三种使用方式 通过伪类 -->
     <span class="third"></span>
     <style>
@@ -30,8 +30,12 @@
             content: '\e66c';
             font-family: iconfont;
         }
-    </style>
 
+        span {
+            width: 10px;
+            height: 10px;
+        }
+    </style>
 
     <!-- 使用步骤总结：
         1.将选中的图标加入项目(购物车)
