--- a/测试检查非空，undefined copy.html
+++ b/测试检查非空，undefined copy.html
@@ -9,31 +9,38 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         let test1
-        let test2=''
-        let test3=null
-        let test4=5
-        console.log('test1',test1);
-        console.log('test2',test2);
-        console.log('test3',test3);
-        console.log('test4',test4);
+        let test2 = ''
+        let test3 = null
+        let test4 = 5
+        let test5 = undefined
+        console.log('test1', test1);
+        console.log('test2', test2);
+        console.log('test3', test3);
+        console.log('test4', test4);
+        console.log('test5', test5);
         console.log('开始测试===============');
-        if(test1){
-            console.log('test1',test1);
-        }else if(test2){
-            console.log('test2',test2);
-        }else if(test3){
-            console.log('test3',test3);
-        }else if(test4){
-            console.log('test4',test4);
+        if (test1) {
+            console.log('test1', test1);
+        } else if (test2) {
+            console.log('test2', test2);
+        } else if (test3) {
+            console.log('test3', test3);
+        } else if (test4) {
+            console.log('test4', test4);
+        } else if (test5) {
+            console.log('test5', test5);
         }
     </script>
 </body>
+
 </html>
