--- a/数组方法测试.html
+++ b/数组方法测试.html
@@ -18,64 +18,42 @@
 
 <body>
     <script>
-        let str = new String()
-        let str2 = new String('asdaagfgrjhgfhjyuijh')
-        //anchor 已废弃
-        //big 已废弃
-        //blink 已废弃
-        //bold  已废弃
-        //fontcolor 已废弃
-        //fontsize 已废弃
-        //link 已废弃
-        //small  已废弃
-        //strike 已废弃
-        //sub 已废弃
-        //sup 已废弃
-
-
-        //charAt 方法从一个字符串中返回指定的字符  str2.charAt(9)  结果：j 
-        //charCodeAt 方法返回从一个字符串中返回指定的字符的Unicode码
-        //codePointAt 方法返回 一个 Unicode 编码点值的非负整数
-        //concat 方法将一个或多个字符串与原字符串连接合并，形成一个新的字符串并返回
-        //endsWith 方法用来判断当前字符串是否是以另外一个给定的子字符串“结尾”的，根据判断结果返回 true 或 false。
-        //fixed 保留小数
-
-        //includes 方法用于判断一个字符串是否包含在另一个字符串中，根据情况返回 true 或 false。
-        //indexOf 方法返回调用它的 String 对象中第一次出现的指定值的索引，从 fromIndex 处进行搜索。如果未找到该值，则返回 -1。
-        //italics 已废弃
-        //lastIndexOf 方法返回调用String 对象的指定值最后一次出现的索引，在一个字符串中的指定位置 fromIndex处从后向前搜索。如果没找到这个特定值则返回-1 。
-        //length
-
-        //localeCompare 方法返回一个数字来指示一个参考字符串是否在排序顺序前面或之后或与给定字符串相同。
-        //match 方法检索返回一个字符串匹配正则表达式的结果。
-        //matchAll 方法返回一个包含所有匹配正则表达式的结果及分组捕获组的迭代器。
-        //normalize 方法会按照指定的一种 Unicode 正规形式将当前字符串正规化。（如果该值不是字符串，则首先将其转换为一个字符串）。
-        //padEnd 方法会用一个字符串填充当前字符串（如果需要的话则重复填充），返回填充后达到指定长度的字符串。从当前字符串的末尾（右侧）开始填充。
-        //padStart 方法用另一个字符串填充当前字符串(如果需要的话，会重复多次)，以便产生的字符串达到给定的长度。从当前字符串的左侧开始填充。
-        //repeat 构造并返回一个新字符串，该字符串包含被连接在一起的指定数量的字符串的副本。
-        //replace 方法返回一个由替换值（replacement）替换部分或所有的模式（pattern）匹配项后的新字符串。模式可以是一个字符串或者一个正则表达式，替换值可以是一个字符串或者一个每次匹配都要调用的回调函数
-        //replaceAll 方法返回一个新字符串，新字符串所有满足 pattern 的部分都已被replacement 替换。pattern可以是一个字符串或一个 RegExp， replacement可以是一个字符串或一个在每次匹配被调用的函数
-        //search 方法用于检索字符串中指定的子字符串，或检索与正则表达式相匹配的子字符串
-        //slice  方法提取某个字符串的一部分，并返回一个新的字符串，且不会改动原字符串。
-        //split 方法使用指定的分隔符字符串将一个String对象分割成子字符串数组，以一个指定的分割字串来决定每个拆分的位置。 
-        //startsWith 方法用来判断当前字符串是否以另外一个给定的子字符串开头，并根据判断结果返回 true 或 false。
-        //substr 未来将可能会被移除掉。
-        // substring 方法返回一个字符串在开始索引到结束索引之间的一个子集, 或从开始索引直到字符串的末尾的一个子集。
-        //toLocaleLowerCase 方法根据任何指定区域语言环境设置的大小写映射，返回调用字符串被转换为小写的格式。
-        //toLocaleUpperCase 方法根据本地主机语言环境把字符串转换为大写格式，并返回转换后的字符串。
-        //toLowerCase 会将调用该方法的字符串值转为小写形式，并返回。
-        //toUpperCase 会将调用该方法的字符串值转为小大写形式，并返回。
-        //toString 方法返回指定对象的字符串形式。
-        //trim 方法会从一个字符串的两端删除空白字符
-        //trimEnd 方法从一个字符串的末端移除空白字符
-        //trimLeft 
-        //trimRight
-        //trimStart  方法从字符串的开头删除空格
-        //valueOf 方法返回  String  对象的原始值
-        //Symbol(Symbol.iterator)
-
-        console.log('String', str);
-        console.log('String', str2.charAt(9));
+        let array = new Array()
+        //     concat: 方法用于合并两个或多个数组。此方法不会更改现有数组，而是返回一个新数组
+        //     copyWithin: 方法浅复制数组的一部分到同一数组中的另一个位置，并返回它，不会改变原数组的长度。
+        //     entries:方法返回一个新的Array Iterator对象，该对象包含数组中每个索引的键/值对。
+        //     every: 法测试一个数组内的所有元素是否都能通过某个指定函数的测试
+        //     fill: 方法用一个固定值填充一个数组中从起始索引到终止索引内的全部元素。不包括终止索引。
+        //     filter: 方法创建一个新数组, 其包含通过所提供函数实现的测试的所有元素
+        //     find:方法返回数组中满足提供的测试函数的第一个元素的值。否则返回 undefined
+        //     findIndex: 方法返回数组中满足提供的测试函数的第一个元素的索引。若没有找到对应元素则返回-1。
+        //     flat: 方法会按照一个可指定的深度递归遍历数组，并将所有元素与遍历到的子数组中的元素合并为一个新数组返回。
+        //     flatMap: 方法首先使用映射函数映射每个元素，然后将结果压缩成一个新数组。
+        //     forEach: 方法对数组的每个元素执行一次给定的函数。
+        //     includes: 方法用来判断一个数组是否包含一个指定的值，根据情况，如果包含则返回 true，否则返回false。
+        //     indexOf: 方法返回调用它的 String 对象中第一次出现的指定值的索引，从 fromIndex 处进行搜索。如果未找到该值，则返回 -1。
+        //     join: 方法将一个数组（或一个类数组对象）的所有元素连接成一个字符串并返回这个字符串。如果数组只有一个项目，那么将返回该项目而不使用分隔符。
+        //     keys: 方法返回一个包含数组中每个索引键的Array Iterator对象。
+        //     lastIndexOf: 方法返回指定元素（也即有效的 JavaScript 值或变量）在数组中的最后一个的索引，如果不存在则返回 -1。从数组的后面向前查找，从 fromIndex 处开始。
+        //     length: 0
+        //     map:  方法创建一个新数组，其结果是该数组中的每个元素是调用一次提供的函数后的返回值。
+        //     pop: 方法从数组中删除最后一个元素，并返回该元素的值。此方法更改数组的长度。
+        //     push: 方法将一个或多个元素添加到数组的末尾，并返回该数组的新长度。
+        //     reduce: 方法对数组中的每个元素执行一个由您提供的reducer函数(升序执行)，将其结果汇总为单个返回值。
+        //     reduceRight: 方法接受一个函数作为累加器（accumulator）和数组的每个值（从右到左）将其减少为单个值。
+        //     reverse: 方法将数组中元素的位置颠倒，并返回该数组。数组的第一个元素会变成最后一个，数组的最后一个元素变成第一个。该方法会改变原数组。
+        //     shift: 方法从数组中删除第一个元素，并返回该元素的值。此方法更改数组的长度。
+        //     slice: 方法返回一个新的数组对象，这一对象是一个由 begin 和 end 决定的原数组的浅拷贝（包括 begin，不包括end）。原始数组不会被改变。
+        //     some:  方法测试数组中是不是至少有1个元素通过了被提供的函数测试。它返回的是一个Boolean类型的值。
+        //     sort: 方法用原地算法对数组的元素进行排序，并返回数组。默认排序顺序是在将元素转换为字符串，然后比较它们的UTF-16代码单元值序列时构建的
+        //     splice: 方法通过删除或替换现有元素或者原地添加新的元素来修改数组,并以数组形式返回被修改的内容。此方法会改变原数组。
+        //     toLocaleString: 返回一个字符串表示数组中的元素。数组中的元素将使用各自的 toLocaleString 方法转成字符串，这些字符串将使用一个特定语言环境的字符串（例如一个逗号 ","）隔开。
+        //     toString: 返回一个字符串，表示指定的数组及其元素。
+        //     unshift: 方法将一个或多个元素添加到数组的开头，并返回该数组的新长度(该方法修改原有数组)。
+        //     values: 方法返回一个新的 Array Iterator 对象，该对象包含数组每个索引的值
+        //     Symbol(Symbol.iterator): 
+        //     Symbol(Symbol.unscopables)
+        console.log('String', array);
 
     </script>
 </body>
